--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,13 +70,24 @@
             android:text="@string/connect_sim2_text" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/disconnect_any"
-        android:onClick="disconnect"
-        android:text="@string/disconnect_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/disconnect_any"
+            android:onClick="disconnect"
+            android:text="@string/disconnect_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
+        <Button
+            android:id="@+id/startFaceDetection"
+            android:onClick="startFaceDetection"
+            android:text="@string/start_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
     <TextView
         android:id="@+id/connection_status_text"
         android:layout_width="wrap_content"
